deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: spring-maven-example
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: spring-maven-example
  template:
    metadata:
      labels:
        deployment: spring-maven-example
    spec:
      containers:
        - name: spring-maven-example
          image: >-
            image-registry.openshift-image-registry.svc:5000/<does-not-work>/spring-maven-example:0.2
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
